make libdpdkif buildable with a simple "rumpmake"

--- a/src/libdpdkif/Makefile
+++ b/src/libdpdkif/Makefile
@@ -1,12 +1,20 @@
-LIB=	rumpnet_virtif
+LIB=	rumpnet_dpdkif
 
 SRCS=	if_virt.c
 SRCS+=	component.c
 
-CPPFLAGS+=	-I${.CURDIR}/../../../librump/rumpkern -I${.CURDIR}
+RUMPTOP= ${TOPRUMP}
+
+.PATH:	${RUMPTOP}/net/lib/libvirtif
+
+CPPFLAGS+=	-I${RUMPTOP}/librump/rumpkern -I${RUMPTOP}/librump/rumpnet
+
+# soon
+#CPPFLAGS+=	-DVIRTIF_BASE=\"dpdk\"
 
 RUMPCOMP_USER=	#defined
 RUMPCOMP_USER_CPPFLAGS+= -I${RTE_SDK}/${RTE_TARGET}/include
 
+.include "${RUMPTOP}/Makefile.rump"
 .include <bsd.lib.mk>
 .include <bsd.klinks.mk>
