Use new virtif framework to avoid collisions with the tap backend version.
Changes:
* interface name changes from virt[n] to dpdk[n]
* it is now possible to link both rumpnet_virtif and rumpnet_dpdkif
  into the same rump kernel (should you want to)

--- a/src/libdpdkif/Makefile
+++ b/src/libdpdkif/Makefile
@@ -8,12 +8,13 @@ RUMPTOP= ${TOPRUMP}
 .PATH:	${RUMPTOP}/net/lib/libvirtif
 
 CPPFLAGS+=	-I${RUMPTOP}/librump/rumpkern -I${RUMPTOP}/librump/rumpnet
-
-# soon
-#CPPFLAGS+=	-DVIRTIF_BASE=\"dpdk\"
+CPPFLAGS+=	-I${RUMPTOP}/net/lib/libvirtif
+CPPFLAGS+=	-DVIRTIF_BASE=dpdk
 
 RUMPCOMP_USER=	#defined
 RUMPCOMP_USER_CPPFLAGS+= -I${RTE_SDK}/${RTE_TARGET}/include
+RUMPCOMP_USER_CPPFLAGS+= -I${RUMPTOP}/net/lib/libvirtif
+RUMPCOMP_USER_CPPFLAGS+= -DVIRTIF_BASE=dpdk
 
 .include "${RUMPTOP}/Makefile.rump"
 .include <bsd.lib.mk>
