Add a copy if libvirtif into this repo.  While it should ideally be used from upstream, having a private copy will help with iterative development.  To be re-merged "some day".

--- a/src/libdpdkif/Makefile
+++ b/src/libdpdkif/Makefile
@@ -5,15 +5,15 @@ SRCS+=	component.c
 
 RUMPTOP= ${TOPRUMP}
 
-.PATH:	${RUMPTOP}/net/lib/libvirtif
+.PATH:	${.CURDIR}/../libvirtif
 
 CPPFLAGS+=	-I${RUMPTOP}/librump/rumpkern -I${RUMPTOP}/librump/rumpnet
-CPPFLAGS+=	-I${RUMPTOP}/net/lib/libvirtif
+CPPFLAGS+=	-I${.CURDIR}/../libvirtif
 CPPFLAGS+=	-DVIRTIF_BASE=dpdk
 
 RUMPCOMP_USER=	#defined
 RUMPCOMP_USER_CPPFLAGS+= -I${RTE_SDK}/${RTE_TARGET}/include
-RUMPCOMP_USER_CPPFLAGS+= -I${RUMPTOP}/net/lib/libvirtif
+RUMPCOMP_USER_CPPFLAGS+= -I${.CURDIR}/../libvirtif
 RUMPCOMP_USER_CPPFLAGS+= -DVIRTIF_BASE=dpdk
 
 .include "${RUMPTOP}/Makefile.rump"
