Change default rump kernel component directory
Now it matches the way building in README is documented.

--- a/examples/tcp_http_get/Makefile
+++ b/examples/tcp_http_get/Makefile
@@ -1,6 +1,6 @@
 # If you're using anything but the default, change this to
 # point to your installation destination directory.
-RD=../../../buildrump.sh/rump
+RD=../../rump
 
 all: webbrowser
 
