--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,7 @@ script:
  - git submodule update --init
  - ./buildrump.sh/buildrump.sh -T rumptools -s rumpsrc -V NOSTATICLIB=1 -qq -j16 checkout fullbuild
  - (cd dpdk ; make T=x86_64-default-linuxapp-gcc config && make )
- - (
-        export RTE_SDK=`pwd`/dpdk
-        export RTE_TARGET=build
-        cd src/libdpdkif
-        ../../rumptools/rumpmake dependall && ../../rumptools/rumpmake install
+ - ( export RTE_SDK=`pwd`/dpdk; export RTE_TARGET=build; cd src/libdpdkif; ../../rumptools/rumpmake dependall && ../../rumptools/rumpmake install
    )
 - (cd examples/tcp_http_get ; make )
 - (cd examples/udp_echo_server ; make )
