nope. attempt to install kernel headers another way then

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 
 before_install:
- - sudo apt-get install linux-headers-generic -y
+ - sudo apt-get install linux-headers-$(uname -r) -y
 
 script:
  - git submodule update --init
