--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: c
 
+before_install:
+ - sudo apt-get -y update
+ - sudo apt-get -y install linux-headers-generic
+
 script:
  - git submodule update --init
  - ./buildrump.sh/buildrump.sh -T rumptools -s rumpsrc -V NOSTATICLIB=1 -qq -j16 checkout fullbuild
- - ls -l /usr/src
  - (cd dpdk ; make T=x86_64-default-linuxapp-gcc config && make )
  - ( export RTE_SDK=`pwd`/dpdk; export RTE_TARGET=build; cd src/libdpdkif; ../../rumptools/rumpmake dependall && ../../rumptools/rumpmake install )
  - (cd examples/tcp_http_get ; make )
