Do a cool(ish) Makefile.inc type of thing

--- a/examples/udp_echo_server/Makefile
+++ b/examples/udp_echo_server/Makefile
@@ -1,11 +1,9 @@
-# If you're using anything but the default, change this to
-# point to your installation destination directory.
-RD=../../rump
+include ../Makefile.inc
 
 all: udp_echo_server
 
 udp_echo_server: udp_echo_server.c
-	cc -g $< -o $@ -I${RD}/include -L${RD}/lib -L${RTE_SDK}/${RTE_TARGET}/lib -Wl,-R${RD}/lib -Wl,--no-as-needed -lrumpnet_dpdkif -lrumpnet_config -lrumpdev_bpf -lrumpnet_netinet -lrumpnet_net -lrumpnet -lrump -lrumpuser -lpthread -ldl -lethdev -lrte_eal -lrte_hash -lrte_lpm -lrte_malloc -lrte_mbuf -lrte_mempool -lrte_pmd_igb -lrte_pmd_ixgbe -lrte_ring -lrte_timer
+	cc -g $< -o $@ ${INCS} ${LIBDIR} -Wl,--no-as-needed ${LIBS}
 
 clean:
 	rm -f udp_echo_server *core
