update libs to match a newer dpdk

--- a/examples/Makefile.inc
+++ b/examples/Makefile.inc
@@ -6,4 +6,4 @@ INCS=-I${RD}/include
 
 LIBDIR=-L${RD}/lib -L${RTE_SDK}/${RTE_TARGET}/lib -Wl,-R${RD}/lib 
 
-LIBS=-lrumpnet_dpdkif -lrumpnet_config -lrumpdev_bpf -lrumpnet_netinet -lrumpnet_net -lrumpnet -lrump -lrumpuser -lpthread -ldl -lethdev -lrte_eal -lrte_hash -lrte_lpm -lrte_malloc -lrte_mbuf -lrte_mempool -lrte_pmd_igb -lrte_pmd_ixgbe -lrte_pmd_wm -lrte_ring -lrte_timer
+LIBS=-lrumpnet_dpdkif -lrumpnet_config -lrumpdev_bpf -lrumpnet_netinet -lrumpnet_net -lrumpnet -lrump -lrumpuser -lpthread -ldl -lethdev -lrte_eal -lrte_hash -lrte_lpm -lrte_malloc -lrte_mbuf -lrte_mempool -lrte_pmd_ixgbe -lrte_pmd_e1000 -lrte_ring -lrte_timer
