need the --whole-archive dance

--- a/examples/tcp_http_get/Makefile
+++ b/examples/tcp_http_get/Makefile
@@ -3,7 +3,7 @@ include ../Makefile.inc
 all: webbrowser
 
 webbrowser: webbrowser.c
-	cc -g $< -o $@ ${INCS} ${LIBDIR} -Wl,--no-as-needed ${LIBS}
+	cc -g $< -o $@ ${INCS} ${LIBDIR} -Wl,--no-as-needed -Wl,--whole-archive ${LIBS} -Wl,--no-whole-archive
 
 clean:
 	rm -f *core webbrowser
