make build infos go to #rumpkernel-builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,6 @@ script:
  - ( cd src/libdpdkif; ../../rumptools/rumpmake dependall && ../../rumptools/rumpmake install )
  - (cd examples/tcp_http_get ; make )
  - (cd examples/udp_echo_server ; make )
+
+notifications:
+  irc: "chat.freenode.net#rumpkernel-builds"
