--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,10 @@ script:
  - (cd examples/udp_echo_server ; make )
 
 notifications:
-  irc: "chat.freenode.net#rumpkernel-builds"
+  irc:
+    channels:
+      - "chat.freenode.net#rumpkernel-builds"
+    template:
+      - '%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}'
+    skip_join: true
+    use_notice: true
