use new-style build commands

--- a/src/libdpdkif/Makefile
+++ b/src/libdpdkif/Makefile
@@ -11,7 +11,7 @@ CPPFLAGS+=	-I${RUMPTOP}/librump/rumpkern -I${RUMPTOP}/librump/rumpnet
 CPPFLAGS+=	-I${.CURDIR}/../libvirtif
 CPPFLAGS+=	-DVIRTIF_BASE=dpdk
 
-RUMPCOMP_USER=	#defined
+RUMPCOMP_USER_SRCS=	rumpcomp_user.c
 RUMPCOMP_USER_CPPFLAGS+= -I${RTE_SDK}/${RTE_TARGET}/include
 RUMPCOMP_USER_CPPFLAGS+= -I${.CURDIR}/../libvirtif
 RUMPCOMP_USER_CPPFLAGS+= -DVIRTIF_BASE=dpdk
