--- a/examples/tcp_http_get/Makefile
+++ b/examples/tcp_http_get/Makefile
@@ -1,9 +1,4 @@
-include ../Makefile.inc
+PROG=	webbrowser
+NOMAN=	yes, no
 
-all: webbrowser
-
-webbrowser: webbrowser.c
-	cc -g $< -o $@ ${INCS} ${LIBDIR} -Wl,--no-as-needed -Wl,--whole-archive ${NETLIBS} -Wl,--no-whole-archive ${LIBS}
-
-clean:
-	rm -f *core webbrowser
+.include <bsd.prog.mk>
