--- a/examples/udp_echo_server/Makefile
+++ b/examples/udp_echo_server/Makefile
@@ -1,9 +1,4 @@
-include ../Makefile.inc
+PROG=	udp_echo_server
+NOMAN=	not now, john
 
-all: udp_echo_server
-
-udp_echo_server: udp_echo_server.c
-	cc -g $< -o $@ ${INCS} ${LIBDIR} -Wl,--no-as-needed -Wl,--whole-archive ${NETLIBS} -Wl,--no-whole-archive ${LIBS}
-
-clean:
-	rm -f udp_echo_server *core
+.include <bsd.prog.mk>
