put libvirtif under libdpdkif, makes its purpose more obvious

--- a/src/libdpdkif/Makefile
+++ b/src/libdpdkif/Makefile
@@ -2,7 +2,7 @@ LIB=	rumpnet_dpdkif
 VIRTIF=	dpdk
 
 RUMPTOP= ${TOPRUMP}
-.include "${.CURDIR}/../libvirtif/Makefile.virtif"
+.include "${.CURDIR}/virtif/Makefile.virtif"
 
 RUMPCOMP_USER_SRCS=	dpdkif_user.c
 RUMPCOMP_USER_CPPFLAGS+= -I${RTE_SDK}/${RTE_TARGET}/include
