--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,8 @@ before_install:
  - sudo apt-get -y install linux-headers-generic
  - git submodule update --init
 
-before_script:
- - export RTE_SDK=$(pwd)/dpdk
- - export RTE_TARGET=build
-
 script:
- - ./buildrump.sh/buildrump.sh -T rumptools -s rumpsrc -V MKPIC=no -qq -j16 checkout fullbuild
- - sudo ln -sf $(ls /lib/modules | sed 1q) /lib/modules/$(uname -r)
- - (cd dpdk ; make T=$(uname -m)-default-linuxapp-gcc config && make )
- - ( cd src/libdpdkif; ../../rumptools/rumpmake dependall && ../../rumptools/rumpmake install )
- - (cd examples/tcp_http_get ; ../../rumptools/rumpmake dependall )
- - (cd examples/udp_echo_server ;  ../../rumptools/rumpmake dependall )
+ - make
 
 notifications:
   irc:
