we still need the header symlink for travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
  - git submodule update --init
 
 script:
+ - sudo ln -sf $(ls /lib/modules | sed 1q) /lib/modules/$(uname -r)
  - make
 
 notifications:
