Try disabling building KNI, so that we can work with travis' not-quite-ubuntu environment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 
 script:
  - sudo ln -sf $(ls /lib/modules | sed 1q) /lib/modules/$(uname -r)
+ - .travis/dpdk_disablekni.sh
  - make
 
 notifications:
